# atmospheric-intelligence-engine

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-data  Makefile  PUBLISH.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
data/: README.md
docs/: paper_to_code_mapping.md
notebooks/: 01_eda.py  02_modelling.py  03_forecast_skill.py  04_uncertainty.py  05_scenarios.py  README.md
scripts/: generate_synthetic_sample.py  make_figures.py  make_toc.py  run_pipeline.py
src/aie/: __init__.py  cli.py  config.py  dataset.py  evaluate.py  pipeline.py  plotting.py  scenarios.py  train.py  uncertainty.py  utils.py
src/aie/data/: __init__.py  features.py  loader.py  qc.py  splits.py
src/aie/models/: __init__.py  aie.py  baselines.py  lstm.py
tests/: conftest.py  test_data.py  test_evaluate.py  test_models.py
